--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "teamflow",
   "version": "1.0.0",
-  "description": "Application de gestion de matchs",
+  "description": "Gestion de matchs TeamFlow",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ejs": "^3.1.9",
-    "dotenv": "^16.3.1"
+    "express": "^4.19.2",
+    "ejs": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
