--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "ejs": "^3.1.10"
+    "ejs": "^3.1.10",
+    "dotenv": "^16.4.5"
   },
   "engines": {
     "node": ">=14.0.0"
