--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "ejs": "^3.1.10",
-    "dotenv": "^16.4.5"
+    "ejs": "^3.1.10"
   },
   "engines": {
     "node": ">=14.0.0"
